# LibQQt

./: .gitignore  .gitmodules  CMakeLists.txt  QQt.pri  QQt.pro  QQtExample.pro  QQtExample_App.pro  QQtExample_Library.pro  QQtExample_Temp.pro  QQtFoundation.doc  README.md  a0-qqtfoundation.pro  build.cmd  changelog.md  charge.md  content.md  dmmu.h  graphics.h  hal.h  jz_cim.h  licence.md  multi-link.md  project-manager.md  project.md  pymake.ini  pymake.json  pymake.py  qcpdocumentobject.cpp  qqt.pro  qqtanimation.h  qqtanimationmanager.cpp  qqtanimationmanager.h  qqtcheckbox.cpp  qqtcheckbox.h  qqtcheckbox.ui  qqtclient.cpp  qqtclient.h  qqtcloudprotocol.cpp  qqtcloudprotocol.h  qqtcloudtreemodel.cpp  (+107 more)
examples/console/: CMakeLists.txt  main.cpp
examples/qqtframe/: CMakeLists.txt  qqtapp.cpp  qqtframe.pro  qqtwindow.cpp  qqtwindow.ui
src/: CMakeLists.txt  QQt.pri  QQt.pro  QQtBase.pro  app_base_manager.pri  app_configure.pri  app_configure_library.pri  app_deploy.pri  app_deploy_config.pri  app_link_qqt_library.pri  app_linking.pri  app_multi_link_config.pri  app_multi_link_technology.pri  lib_header.pri  link_qqt_library.pri  linux_cp_files.sh  linux_cur_path.sh  linux_read_ini.sh  linux_write_ini.sh  mac_deploy_qt4.sh  qqt-local.h  qqt-qt.h  qqt.h  qqt.pri  qqt.pro  qqt.qrc  qqt.rc  qqt_3rdparty.pri  qqt_function.pri  qqt_header.pri  qqt_install.pri  qqt_kit.pri  qqt_library.pri  qqt_qkit.pri  qqt_source.pri  qqt_version.pri  qqtandroid.h  qqtdarwin.h  qqtgui.h  qqtlinux.h  (+4 more)
src/charts/: qqtchart.cpp  qqtchart.h  qqtchartview.cpp  qqtchartview.h
src/core/: qqtanimation.cpp  qqtanimation.h  qqtcore.cpp  qqtcore.h  qqtdatapersistence.cpp  qqtdatapersistence.h  qqtdebug.cpp  qqtdebug.h  qqtdicthelper.cpp  qqtdicthelper.h  qqtdictionary.cpp  qqtdictionary.h  qqtevent.cpp  qqtevent.h  qqtobjectfactory.cpp  qqtobjectfactory.h  qqtobjectmanager.cpp  qqtobjectmanager.h  qqtordereddictionary.cpp  qqtordereddictionary.h  qqtorderedmap.cpp  qqtorderedmap.h  qqtversion.h
src/customplot/: qcpdocumentobject.h  qcustomplot.h
src/dmmu/: dmmu.c  dmmu.h
src/exquisite/: qqtbodymouselocker.cpp  qqtbodymouselocker.h  qqtbodymouselocker_p.cpp  qqtbodymouselocker_p.h  qqtbodymouselocker_unix.cpp  qqtbodymouselocker_unix.h  qqtbodymouselocker_win.cpp  qqtbodymouselocker_win.h  qqtbodymouselocker_x11.cpp  qqtbodymouselocker_x11.h  qqtbodymousewheelscalingeffect.cpp  qqtbodymousewheelscalingeffect.h  qqtbodymover.cpp  qqtbodymover.h  qqtbodymover_p.cpp  qqtbodymover_p.h  qqtbodyresizer.cpp  qqtbodyresizer.h  qqtbodyresizer_p.cpp  qqtbodyresizer_p.h  qqtbodyselectedstyle.cpp  qqtbodyselectedstyle.h  qqtcanclicklabel.cpp  qqtcanclicklabel.h  qqtcanclickwidget.cpp  qqtcanclickwidget.h  qqtchildbodymover.cpp  qqtchildbodymover.h  qqtcircleeffectprogressbar.cpp  qqtcircleeffectprogressbar.h  qqtclickhelper.cpp  qqtclickhelper.h  qqtclicklabel.cpp  qqtclicklabel.h  qqtclicksoundhelper.h  qqtclickwidget.cpp  qqtclickwidget.h  qqtcomplexprogressbar.cpp  qqtcomplexprogressbar.h  qqtcustomeffectprogressbar.cpp  (+95 more)
src/frame/: QQtApplication  qqtanimation.cpp  qqtanimation.h  qqtapplication.cpp  qqtapplication.h  qqtdatapersistence.cpp  qqtdataserialization.cpp  qqtdataserialization.h  qqtdialog.cpp  qqtdialog.h  qqtdialog.ui  qqtfindservermanager.cpp  qqtfindservermanager.h  qqtframe.cpp  qqtframe.h  qqtinput.cpp  qqtinput.h  qqtinput.ui  qqtlineeditwithsearch.cpp  qqtlineeditwithsearch.h  qqtmsgbox.cpp  qqtmsgbox.h  qqtmsgbox.ui  qqtmultipagetablewidget.cpp  qqtmultipagetablewidget.h  qqtmultipagetablewidget.ui  qqtosdwidget.cpp  qqtosdwidget.h  qqtpassworddialog.cpp  qqtpassworddialog.h  qqtpassworddialog.ui  qqtpreviewwidget.cpp  qqtpreviewwidget.h  qqtpreviewwidget.ui  qqtprogressdialog.cpp  qqtprogressdialog.h  qqtprogressdialog.ui  qqtqssmanager.cpp  qqtqssmanager.h  qqtreport.h  (+9 more)
src/gui/: qqtbuttonitemdelegate.cpp  qqtbuttonitemdelegate.h  qqtcheckboxdelegate.cpp  qqtcheckboxdelegate.h  qqtdicttablemodel.cpp  qqtdicttablemodel.h  qqtdicttreemodel.cpp  qqtdicttreemodel.h  qqtfilesystemtreemodel.cpp  qqtfilesystemtreemodel.h  qqtftptreemodel.cpp  qqtftptreemodel.h  qqtgui.h  qqtjsontreemodel.cpp  qqtjsontreemodel.h  qqtnofocusdelegate.cpp  qqtnofocusdelegate.h  qqtprogressbardelegate.cpp  qqtprogressbardelegate.h  qqtslideritemdelegate.cpp  qqtslideritemdelegate.h  qqtsqltreemodel.cpp  qqtsqltreemodel.h  qqttablemodel.cpp  qqttablemodel.h  qqttreemodel.cpp  qqttreemodel.h  qqtxmltreemodel.cpp  qqtxmltreemodel.h
src/highgrade/: qqtdatapersistence.cpp  qqtdatapersistence.h  qqtdataserialization.cpp  qqtdataserialization.h  qqthgbluetoothclient.cpp  qqthgbluetoothclient.h  qqthgbluetoothserver.cpp  qqthgbluetoothserver.h  qqthgprotocol.cpp  qqthgprotocol.h  qqthgprotocolmanager.cpp  qqthgprotocolmanager.h  qqthgtcpclient.cpp  qqthgtcpclient.h  qqthgtcpprotocol.cpp  qqthgtcpprotocol.h  qqthgtcpserver.cpp  qqthgtcpserver.h  qqthgudpclient.cpp  qqthgudpclient.h  qqthgudpprotocol.cpp  qqthgudpprotocol.h  qqthgudpserver.cpp  qqthgudpserver.h  qqthgwebsocketclient.cpp  qqthgwebsocketclient.h  qqthgwebsocketprotocol.cpp  qqthgwebsocketprotocol.h  qqthgwebsocketserver.cpp  qqthgwebsocketserver.h  qqtlocalclient.cpp  qqtlocalserver.cpp  qqtlocalserver.h  qqtmessagequeue.cpp  qqtmessagequeue.h  qqtmessagequeueprivate.cpp  qqtnamedpipe.cpp  qqtnamedpipe.h  qqtnamedpipeprivate.cpp  qqtnamedpipeprivate.h  (+21 more)
src/multimedia/: qqtaudioeffect.cpp  qqtaudioeffect.h  qqtaudiomanager.cpp  qqtaudiomanager.h  qqtcamera.cpp  qqtcamera.h  qqtimageconverter.cpp  qqtimageconverter.h  qqtlogicpreviewwidget.cpp  qqtlogicpreviewwidget.h  qqtlogicpreviewwidget.ui  qqtlogicvideomanager.cpp  qqtlogicvideomanager.h  qqtmplayer.cpp  qqtmplayer.h  qqtmplayerwidget.cpp  qqtmplayerwidget.h  qqtmplayerwidget.ui  qqtsoundeffect.cpp  qqtsoundeffect.h  qqtvideomanager.cpp  qqtvideomanager.h  qqtwavaudiomanager.cpp  qqtwavaudiomanager.h  qqtwavsoundeffect.cpp  qqtwavsoundeffect.h
src/network/: qqtbluetooth.cpp  qqtbluetooth.h  qqtbluetoothclient.cpp  qqtbluetoothclient.h  qqtbluetoothmanager.cpp  qqtbluetoothmanager.h  qqtbluetoothserver.h  (+77 more)
(+4762 files in other folders)
